<resources>
    <string name="app_name">Hamilton Heat Alert</string>
    <string name="action_settings">Settings</string>
    <string name="city_of_hamilton_heat_advisory">City of Hamilton Heat Advisory</string>
    <string name="current_status">Heat status:</string>
    <string name="advisory_status_unknown">Unknown</string>
    <string name="heat_advisory_fetch_error">There was a problem fetching the latest heat status</string>
    <string name="advisory_status_checking">...</string>
    <string name="refresh_button">Refresh</string>
    <string name="refresh_button_checking">Checking...</string>
    <string name="alert_context_text">Hamilton Heat Alert</string>
    <string name="error_google_play_services_not_supported">Your device does not support push notifications.</string>
    <string name="receive_push_notifications_checkbox">Receive push notifications</string>
    <string name="registering_for_push_notifications_now_please_wait">Registering for push notifications now. Please wait…</string>
    <string name="push_alerts_registration_failed">There was a problem registering for push alerts</string>
    <string name="gcm_message_receive_error">There was a problem retreiving the latest heat warning</string>
    <string name="unregistering_push_notifications_please_wait">Unregistering. Please wait…</string>
    <string name="refresh_menu">Recheck heat status</string>
    <string name="menu_subscribe_to_push_alerts">Subscribe to push alerts</string>
    <string name="empty" />
    <string name="subscribe_success">You are now subscribed for push notifications.</string>
    <string name="subscribe_success_description_1">You will now receive push notifications for heat alerts in Hamilton ON, Canada.</string>
    <string name="subscribe_success_description_2">Note that if you reinstall this application at any time, you will need to also rerun this application at least once to resubscribe to these push alerts.</string>
    <string name="continue_button">Continue</string>
    <string name="one_moment">One moment…</string>
    <string name="subscribe_error_description">Ensure that you are connected to the internet, and retry any time by reloading this app.</string>
    <string name="subscribe_error">There was a problem subscribing you for push notifications.</string>
    <string name="retry_button">Retry</string>
    <string name="google_play_services_not_installed">Google play services not installed</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="ok">OK</string>
    <string name="push_not_supported_dialog_title">Push notification error</string>
    <string name="push_not_supported_dialog_text">You are unable to subscribe to heat alerts because your device does not support them.</string>
    <string name="last_checked">Last checked %s</string>
    <string name="disclaimer_menu">Disclaimer</string>
    <string name="disclaimer">Heat alerts are pulled from the city of Hamilton's rss feed at http://old.hamilton.ca/databases/phcs/heatalert/heatevent.xml.\n\nThis software and the accompanying files are sold "as is" and without warranties as to performance or merchantability or any other warranties whether expressed or implied. This disclaimer concerns all files generated and edited by Hamilton Heat Alert as well.</string>
    <string name="website_menu">Heat Alert Website</string>
    <string name="heat_alert_website">http://www.hamilton.ca/public-health/health-topics/heat-alerts-heat-related-illness</string>
</resources>
