<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/brand_col_1"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/layout_subscribing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            style="@android:style/Widget.ProgressBar"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/one_moment"
            android:id="@+id/textView3"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_subscribe_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/subscribe_success"
                    android:id="@+id/textView6"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/subscribe_success_description_1"
                    android:id="@+id/textView2"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/subscribe_success_description_2"
                    android:id="@+id/textView7"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/continue_from_success_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_subscribe_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/subscribe_error"
                    android:id="@+id/textView4"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/subscribe_error_description"
                    android:id="@+id/textView5"
                    android:layout_marginTop="@dimen/component_vertical_spacing" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout"
            android:layout_gravity="center"
            >


            <Button
                android:id="@+id/retry_from_error_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry_button"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:id="@+id/continue_from_error_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_button"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/retry_from_error_button"
                android:layout_toEndOf="@+id/retry_from_error_button"
                android:layout_marginLeft="@dimen/component_horizontal_spacing"
                android:layout_marginStart="16dp" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>